# greptimedb-ingester-rust

./: Cargo.toml  README.md  docker-compose.test.yml
.github/workflows/: integration-tests.yml  release.yml
examples/: README.md  bulk_stream_writer_example.rs  db-connection.toml  insert_example.rs
examples/bench/: benchmark_runner.rs
examples/util/: config.rs
scripts/: run_integration_tests.sh
src/: bulk.rs  channel_manager.rs  client.rs  database.rs  flight.rs  lib.rs
tests/integration/: compression_integration.rs
